--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-Hello World
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="css/banner.css"></script>
+</head>
+<body style="background-color: rgb(255, 255, 255)">
+    
+    <div class="w3-top" style="border-bottom: 1px solid rgb(245, 245, 245);">
+        <div class="w3-bar w3-white w3-hover-opacity-off w3-center w3-small">
+            <div class="w3-left" style="margin-left: 5%">
+            <a href="#" class="w3-bar-item" name="btn_facebook"><i class="w3-xlarge fa fa-facebook-square"></i></a>
+            <a href="#" class="w3-bar-item" name="btn_contact"><i class="w3-xlarge fa fa-envelope-square"></i></a>
+            </div>
+            <div class="w3-right" style="margin-right: 5%">
+            <a href="#" class="w3-bar-item w3-text-grey" name="btn_about" style="text-decoration: underline; font-size: 12px"> PERFIL </a>
+            <a href="#" class="w3-bar-item w3-text-grey" name="btn_about" style="text-decoration: underline;  font-size: 12px"> EXPERIENCIA </a>
+            <a href="#" class="w3-bar-item w3-text-grey" name="btn_about" style="text-decoration: underline;  font-size: 12px"> CONTACTO </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="w3-container w3-margin-top w3-border" style="width: 100%;">
+        <div class="w3-left">
+        <img src="images/profile.png" width="auto">
+        </div>
+    </div>
+
+</body>
+</html>
