--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body style="background-color: rgb(255, 255, 255)">
     
-    <div class="w3-top" style="border-bottom: 1px solid rgb(245, 245, 245);">
+    <div class="w3-top w3-hide-medium w3-hide-small" style="border-bottom: 1px solid rgb(245, 245, 245);">
         <div class="w3-bar w3-white w3-hover-opacity-off w3-center w3-small">
             <div class="w3-left" style="margin-left: 5%">
             <a href="#" class="w3-bar-item" name="btn_facebook"><i class="w3-xlarge fa fa-facebook-square"></i></a>
@@ -24,10 +24,25 @@
         </div>
     </div>
 
-    <div class="w3-container w3-margin-top w3-border" style="width: 100%;">
-        <div class="w3-left">
-        <img src="images/profile.png" width="auto">
+    <div class="w3-top w3-hide-large">
+        <div class="w3-bar w3-white w3-hover-opacity-off w3-center w3-small">
+            <div class="w3-left">
+            <a href="#" class="w3-bar-item" name="btn_facebook"><i class="w3-xlarge fa fa-facebook-square"></i></a>
+            <a href="#" class="w3-bar-item" name="btn_contact"><i class="w3-xlarge fa fa-envelope-square"></i></a>
+            </div>
+            <div class="w3-dropdown-hover w3-right">
+                <a class="w3-button w3-white"><i class="fa  fa-bars w3-large"></i> Menu</a>
+                <div class="w3-dropdown-content w3-bar-block w3-border">        
+                <a href="#" class="w3-bar-item w3-text-grey" name="btn_about" style="text-decoration: underline; font-size: 12px"> PERFIL </a>
+                <a href="#" class="w3-bar-item w3-text-grey" name="btn_about" style="text-decoration: underline;  font-size: 12px"> EXPERIENCIA </a>
+                <a href="#" class="w3-bar-item w3-text-grey" name="btn_about" style="text-decoration: underline;  font-size: 12px"> CONTACTO </a>
+                </div>
+            </div>
         </div>
+    </div>
+
+    <div class="w3-container w3-border" style="width: 100%; margin-top: 30px; height: auto;">
+        <img src="images/profile.png" style="width: 30%">
     </div>
 
 </body>
