--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="#" class="w3-bar-item" name="btn_facebook"><i class="w3-xlarge fa fa-facebook-square"></i></a>
             <a href="#" class="w3-bar-item" name="btn_contact"><i class="w3-xlarge fa fa-envelope-square"></i></a>
             </div>
-            <div class="w3-dropdown-hover w3-right">
+            <div class="w3-dropdown-hover w3-right" style="margin-right: 5%">
                 <a class="w3-button w3-white"><i class="fa  fa-bars w3-large"></i> Menu</a>
                 <div class="w3-dropdown-content w3-bar-block w3-border">        
                 <a href="#" class="w3-bar-item w3-text-grey" name="btn_about" style="text-decoration: underline; font-size: 12px"> PERFIL </a>
