--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         					<h4>Sobre Mi</h4>
         					<p>Médico graduado de la Universidad Nacional de Colombia y Urólogo especailista y 
 							sexólogo de la Fundación Universitaria en ciencias de la salud (FUCS - Hospital San Jose).
-							Más de 25 años de experiencia actualmente me encuentró radicado en la ciudad de 
+							Con más de 25 años de experiencia actualmente me encuentró radicado en la ciudad de 
 							Ibagué, Colombia. Especailista en cirugías del tracto urinario, diagnóstico precoz y tratamiento del cancer de próstata,
 							vasectomía y reversión y exámenes diagnósticos   </p>
         				</div>
